--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "1.0.0"
 description = "A CLI tool to get prayer times"
 authors = ["YoussefAswad <85849220+YoussefAswad@users.noreply.github.com>"]
 readme = "README.md"
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.11"
