--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "myprayer"
-version = "2.0.6"
+version = "3.0.0"
 description = "A CLI tool to get prayer times"
 authors = ["Youssef Aswad <youssefaswad@gmail.com>"]
 readme = "README.md"
@@ -11,9 +11,11 @@ license = "MIT"
 python = "^3.8"
 typer = "^0.9.0"
 rich = "^13.6.0"
-requests = "^2.31.0"
 inquirer = "^3.1.3"
 pydantic = "^2.5.3"
+adhanpy = "^1.0.5"
+geopy = "^2.4.1"
+tzlocal = "^5.2"
 
 
 [build-system]
