--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "myprayer"
-version = "3.0.1"
+version = "3.0.2"
 description = "A CLI tool to get prayer times"
 authors = ["Youssef Aswad <youssefaswad@gmail.com>"]
 readme = "README.md"
@@ -16,6 +16,7 @@ pydantic = "^2.5.3"
 adhanpy = "^1.0.5"
 geopy = "^2.4.1"
 tzlocal = "^5.2"
+tzdata = "^2024.1"
 
 
 [build-system]
